featural alphabet and heading background

--- a/alphabet/index.html
+++ b/alphabet/index.html
@@ -2,3 +2,109 @@
 layout: 'navbar'
 title: 'Featural Alphabet'
 ---
+
+<p class="featural">
+  If you can read this paragraph, the font didn't load correctly, and most of the stuff on this page will make very little sense. You should probably update your browser.
+</p>
+<p>
+  Below is an alternative alphabet I created for the English language. The goal of this alphabet is to be both phonetic and featural. Phonetic means there is a one-to-one correspondence between letters and phonemes, and featural means that the shape of a letter tells you, to some extent, how it is pronounced. For example, since /f/ and /v/ are pronounced in a very similar manner, the letters which represent these sounds look very similar.
+</p>
+
+<h3>Consonants</h3>
+
+<p>
+  There are ten basic consonant letters:
+</p>
+<ul>
+  <li><span class="featural">p</span> = /p/</li>
+  <li><span class="featural">t</span> = /t/</li>
+  <li><span class="featural">c</span> = /t&#x283;/</li>
+  <li><span class="featural">k</span> = /k/</li>
+  <li><span class="featural">s</span> = /s/</li>
+  <li><span class="featural">h</span> = /h/</li>
+  <li><span class="featural">r</span> = /&#x279;/</li>
+  <li><span class="featural">l</span> = /l/</li>
+  <li><span class="featural">y</span> = /j/</li>
+  <li><span class="featural">w</span> = /w/</li>
+</ul>
+<p>
+  The rest of the consonants are derived from these letters in various ways. The letters <span class="featural">p</span>, <span class="featural">t</span>, and <span class="featural">c</span> can be lengthened to turn them into fricatives: <span class="featural">p</span> becomes <span class="featural">f</span>, <span class="featural">t</span> becomes <span class="featural">T</span>, and <span class="featural">c</span> becomes <span class="featural">S</span>. These new letters are pronounced /f/, /&theta;/, and /&#x283;/ respectively. The three nasals /m/, /n/, and /&eng;/ are created by doubling the corresponding stop: <span class="featural">p</span> becomes <span class="featural">m</span>, <span class="featural">t</span> becomes <span class="featural">n</span>, and <span class="featural">k</span> becomes <span class="featural">q</span>. Finally, the voiced obstruents are derived from the voiceless obstruents by adding a line to the end:
+</p>
+<ul>
+  <li><span class="featural">p</span> /p/ &rightarrow; <span class="featural">b</span> /b/</li>
+  <li><span class="featural">f</span> /f/ &rightarrow; <span class="featural">v</span> /v/</li>
+  <li><span class="featural">t</span> /t/ &rightarrow; <span class="featural">d</span> /d/</li>
+  <li><span class="featural">T</span> /&theta;/ &rightarrow; <span class="featural">D</span> /&eth;/</li>
+  <li><span class="featural">c</span> /t&#x283;/ &rightarrow; <span class="featural">j</span> /d&#x292;/</li>
+  <li><span class="featural">S</span> /&#x283;/ &rightarrow; <span class="featural">Z</span> /&#x292;/</li>
+  <li><span class="featural">k</span> /k/ &rightarrow; <span class="featural">g</span> /g/</li>
+  <li><span class="featural">s</span> /s/ &rightarrow; <span class="featural">z</span> /z/</li>
+</ul>
+
+<h3>Vowels</h3>
+
+<p>
+  The pronunciation of vowels in English varies greatly from dialect to dialect, much more so than the pronunciation of consonants. I have chosen to base the vowel system on my own dialect of English, which contains ten monophthongs: /i/, /&#x26A;/, /&epsilon;/, /&aelig;/, /a/, /&#x252;/, /&#x28C;/, /&#x28A;/, /u/, and /&#x259;/. I have also chosen to ignore allophony. For example, I pronounce the phoneme /&aelig;/ as [e&#x259;] when it occurs before /m/ or /n/. However, it is still spelled with the same letter in the featural alphabet, because it is still the same phoneme even though it is pronounced somewhat differently.
+</p>
+<p>
+  There are six basic vowel letters:
+</p>
+<ul>
+  <li><span class="featural">i</span> = /&#x26A;/</li>
+  <li><span class="featural">e</span> = /&aelig;/</li>
+  <li><span class="featural">a</span> = /a/</li>
+  <li><span class="featural">o</span> = /&#x252;/</li>
+  <li><span class="featural">u</span> = /&#x28A;/</li>
+  <li><span class="featural">x</span> = /&#x259;/</li>
+</ul>
+<p>
+  The remaining four monophthongs can be derived from these letters by adding a line to the end:
+</p>
+<ul>
+  <li><span class="featural">i</span> /&#x26A;/ &rightarrow; <span class="featural">I</span> /i/</li>
+  <li><span class="featural">e</span> /&aelig;/ &rightarrow; <span class="featural">E</span> /&epsilon;/</li>
+  <li><span class="featural">o</span> /&#x252;/ &rightarrow; <span class="featural">O</span> /&#x28C;/</li>
+  <li><span class="featural">u</span> /&#x28A;/ &rightarrow; <span class="featural">U</span> /u/</li>
+</ul>
+<p>
+  My dialect of English also contains five phonemic diphthongs: /a&#x26A;/, /&aelig;&#x28A;/, /e&#x26A;/, /&#x259;&#x28A;/, and /&#x254;&#x26A;/. There is also the sequence /ju/ (which can be interpreted as either a diphthong or a glide followed by a vowel), as well as four "rhotic diphthongs": /i&#x279;/, /e&#x279;/, /&#x251;&#x279;/, and /&#x254;&#x279;/. Most of these are spelled just as you would expect:
+</p>
+<ul>
+  <li><span class="featural">ai</span> = /a&#x26A;/</li>
+  <li><span class="featural">eu</span> = /&aelig;&#x28A;/</li>
+  <li><span class="featural">Ei</span> = /e&#x26A;/</li>
+  <li><span class="featural">xu</span> = /&#x259;&#x28A;/</li>
+  <li><span class="featural">oi</span> = /&#x254;&#x26A;/</li>
+  <li><span class="featural">yU</span> = /ju/</li>
+  <li><span class="featural">Ir</span> = /i&#x279;/</li>
+  <li><span class="featural">Er</span> = /e&#x279;/</li>
+  <li><span class="featural">ar</span> = /&#x251;&#x279;/</li>
+  <li><span class="featural">or</span> = /&#x254;&#x279;/</li>
+</ul>
+
+<h3>Notes</h3>
+
+<p>
+  The letters <span class="featural">O</span> and <span class="featural">U</span> are written differently when using pen and paper. Instead of a diagonal leftward stroke at the end, there should be a slighly curved rightward stroke, kind of like a miniature "<b>&#x25E1;</b>." I decided to use leftward strokes when making the font to avoid overlapping glyphs.
+</p>
+<p>
+  Syllabic consonants are written with a single letter. Therefore, "work" is spelled <span class="featural">wrk</span>, "full" is spelled <span class="featural">fl</span>, and "button" is spelled <span class="featural">bOtn</span>.
+</p>
+<p>
+  The schwa vowel is optional in many cases, because you usually don't need it to figure out what a word is. Therefore, "the" can be written <span class="featural">D</span>, and "catastrophe" can be written <span class="featural">ktestrfI</span>.
+</p>
+<p>
+  Click <a href="/assets/fonts/english-featural-alphabet.otf" download>this link</a> to download the font as an opentype file.
+</p>
+
+<h3>Example</h3>
+
+<p>
+  Below is a transcription of the opening paragraph of <i>Moby-Dick</i> (one of my favorite books). I have chosen to leave out the schwas unless necessary, and to spell the plural suffix as /s/ regardless of its actual pronunciation.
+</p>
+<p><span class="featural">
+  kol mI iSmEil. sOm yIrs xgxu&mdash;nEvr maind heu loq prsaislI&mdash;heviq litl or nxu mOnI in mai prs, end nOTiq partikylr t intrist mI an Sor, ai Tot ai wud sEil xbeut x litl end sI D wotrI part v D wrld. it iz x wEi ai hev v draiviq of D splIn end rEgylEitiq D srkylEiSn. wEnEvr ai faind maisElf grxuiq grim xbeut D mauT; wEnEvr it iz x demp, drizlI nxuvEmbr in mai sxul; wEnEvr ai faind maisElf involntErlI poziq bfor kofn wErheuss, end briqiq Op D rIr v EvrI fyUnrl ai mIt; end xspESlI wEnEvr mai haipxus gEt sOc n Opr hend v mI, Det it rkwairs x stroq morl prinspl t prvEnt mI frOm dlibrtlI stEpiq int D strIt, end mTadklI nakiq pIpls hets of&mdash;DEn, ai xkeunt it hai taim t gEt t sI ez sUn ez ai ken. Dis iz mai sObsttUt fr pistl end bol. wiT x filsafkl flriS kEitxu Trxus himsElf xpan hiz sord; ai kwaitlI tEik t D Sip. DEr iz nOTiq srpraiziq in Dis. if DEi bOt nU it, olmxust ol mEn in DEr dgrI, sOm taim r ODr, cEriS vErI nIrlI D sEim fIliqs tordz D xuSn wiT mI.
+</span></p>
+<p><i>
+    Call me Ishmael. Some years ago&mdash;never mind how long precisely&mdash;having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world. It is a way I have of driving off the spleen and regulating the circulation. Whenever I find myself growing grim about the mouth; whenever it is a damp, drizzly November in my soul; whenever I find myself involuntarily pausing before coffin warehouses, and bringing up the rear of every funeral I meet; and especially whenever my hypos get such an upper hand of me, that it requires a strong moral principle to prevent me from deliberately stepping into the street, and methodically knocking people’s hats off&mdash;then, I account it high time to get to sea as soon as I can. This is my substitute for pistol and ball. With a philosophical flourish Cato throws himself upon his sword; I quietly take to the ship. There is nothing surprising in this. If they but knew it, almost all men in their degree, some time or other, cherish very nearly the same feelings towards the ocean with me.
+</i></p>
