replace unicode escapes with characters

--- a/alphabet/index.html
+++ b/alphabet/index.html
@@ -18,74 +18,74 @@ title: 'Featural Alphabet'
 <ul>
   <li><span class="featural">p</span> = /p/</li>
   <li><span class="featural">t</span> = /t/</li>
-  <li><span class="featural">c</span> = /t&#x283;/</li>
+  <li><span class="featural">c</span> = /tʃ/</li>
   <li><span class="featural">k</span> = /k/</li>
   <li><span class="featural">s</span> = /s/</li>
   <li><span class="featural">h</span> = /h/</li>
-  <li><span class="featural">r</span> = /&#x279;/</li>
+  <li><span class="featural">r</span> = /ɹ/</li>
   <li><span class="featural">l</span> = /l/</li>
   <li><span class="featural">y</span> = /j/</li>
   <li><span class="featural">w</span> = /w/</li>
 </ul>
 <p>
-  The rest of the consonants are derived from these letters in various ways. The letters <span class="featural">p</span>, <span class="featural">t</span>, and <span class="featural">c</span> can be lengthened to turn them into fricatives: <span class="featural">p</span> becomes <span class="featural">f</span>, <span class="featural">t</span> becomes <span class="featural">T</span>, and <span class="featural">c</span> becomes <span class="featural">S</span>. These new letters are pronounced /f/, /&theta;/, and /&#x283;/ respectively. The three nasals /m/, /n/, and /&eng;/ are created by doubling the corresponding stop: <span class="featural">p</span> becomes <span class="featural">m</span>, <span class="featural">t</span> becomes <span class="featural">n</span>, and <span class="featural">k</span> becomes <span class="featural">q</span>. Finally, the voiced obstruents are derived from the voiceless obstruents by adding a line to the end:
+  The rest of the consonants are derived from these letters in various ways. The letters <span class="featural">p</span>, <span class="featural">t</span>, and <span class="featural">c</span> can be lengthened to turn them into fricatives: <span class="featural">p</span> becomes <span class="featural">f</span>, <span class="featural">t</span> becomes <span class="featural">T</span>, and <span class="featural">c</span> becomes <span class="featural">S</span>. These new letters are pronounced /f/, /θ/, and /ʃ/ respectively. The three nasals /m/, /n/, and /ŋ/ are created by doubling the corresponding stop: <span class="featural">p</span> becomes <span class="featural">m</span>, <span class="featural">t</span> becomes <span class="featural">n</span>, and <span class="featural">k</span> becomes <span class="featural">q</span>. Finally, the voiced obstruents are derived from the voiceless obstruents by adding a line to the end:
 </p>
 <ul>
-  <li><span class="featural">p</span> /p/ &rightarrow; <span class="featural">b</span> /b/</li>
-  <li><span class="featural">f</span> /f/ &rightarrow; <span class="featural">v</span> /v/</li>
-  <li><span class="featural">t</span> /t/ &rightarrow; <span class="featural">d</span> /d/</li>
-  <li><span class="featural">T</span> /&theta;/ &rightarrow; <span class="featural">D</span> /&eth;/</li>
-  <li><span class="featural">c</span> /t&#x283;/ &rightarrow; <span class="featural">j</span> /d&#x292;/</li>
-  <li><span class="featural">S</span> /&#x283;/ &rightarrow; <span class="featural">Z</span> /&#x292;/</li>
-  <li><span class="featural">k</span> /k/ &rightarrow; <span class="featural">g</span> /g/</li>
-  <li><span class="featural">s</span> /s/ &rightarrow; <span class="featural">z</span> /z/</li>
+  <li><span class="featural">p</span> /p/ → <span class="featural">b</span> /b/</li>
+  <li><span class="featural">f</span> /f/ → <span class="featural">v</span> /v/</li>
+  <li><span class="featural">t</span> /t/ → <span class="featural">d</span> /d/</li>
+  <li><span class="featural">T</span> /θ/ → <span class="featural">D</span> /ð/</li>
+  <li><span class="featural">c</span> /tʃ/ → <span class="featural">j</span> /dʒ/</li>
+  <li><span class="featural">S</span> /ʃ/ → <span class="featural">Z</span> /ʒ/</li>
+  <li><span class="featural">k</span> /k/ → <span class="featural">g</span> /g/</li>
+  <li><span class="featural">s</span> /s/ → <span class="featural">z</span> /z/</li>
 </ul>
 
 <h2>Vowels</h2>
 
 <p>
-  The pronunciation of vowels in English varies greatly from dialect to dialect, much more so than the pronunciation of consonants. I have chosen to base the vowel system on my own dialect of English, which contains ten monophthongs: /i/, /&#x26A;/, /&epsilon;/, /&aelig;/, /a/, /&#x252;/, /&#x28C;/, /&#x28A;/, /u/, and /&#x259;/. I have also chosen to ignore allophony. For example, I pronounce the phoneme /&aelig;/ as [e&#x259;] when it occurs before /m/ or /n/. However, it is still spelled with the same letter in the featural alphabet, because it is still the same phoneme even though it is pronounced somewhat differently.
+  The pronunciation of vowels in English varies greatly from dialect to dialect, much more so than the pronunciation of consonants. I have chosen to base the vowel system on my own dialect of English, which contains ten monophthongs: /i/, /ɪ/, /ɛ/, /æ/, /a/, /ɒ/, /ʌ/, /ʊ/, /u/, and /ə/. I have also chosen to ignore allophony. For example, I pronounce the phoneme /æ/ as [eə] when it occurs before /m/ or /n/. However, it is still spelled with the same letter in the featural alphabet, because it is still the same phoneme even though it is pronounced somewhat differently.
 </p>
 <p>
   There are six basic vowel letters:
 </p>
 <ul>
-  <li><span class="featural">i</span> = /&#x26A;/</li>
-  <li><span class="featural">e</span> = /&aelig;/</li>
+  <li><span class="featural">i</span> = /ɪ/</li>
+  <li><span class="featural">e</span> = /æ/</li>
   <li><span class="featural">a</span> = /a/</li>
-  <li><span class="featural">o</span> = /&#x252;/</li>
-  <li><span class="featural">u</span> = /&#x28A;/</li>
-  <li><span class="featural">x</span> = /&#x259;/</li>
+  <li><span class="featural">o</span> = /ɒ/</li>
+  <li><span class="featural">u</span> = /ʊ/</li>
+  <li><span class="featural">x</span> = /ə/</li>
 </ul>
 <p>
   The remaining four monophthongs can be derived from these letters by adding a line to the end:
 </p>
 <ul>
-  <li><span class="featural">i</span> /&#x26A;/ &rightarrow; <span class="featural">I</span> /i/</li>
-  <li><span class="featural">e</span> /&aelig;/ &rightarrow; <span class="featural">E</span> /&epsilon;/</li>
-  <li><span class="featural">o</span> /&#x252;/ &rightarrow; <span class="featural">O</span> /&#x28C;/</li>
-  <li><span class="featural">u</span> /&#x28A;/ &rightarrow; <span class="featural">U</span> /u/</li>
+  <li><span class="featural">i</span> /ɪ/ → <span class="featural">I</span> /i/</li>
+  <li><span class="featural">e</span> /æ/ → <span class="featural">E</span> /ɛ/</li>
+  <li><span class="featural">o</span> /ɒ/ → <span class="featural">O</span> /ʌ/</li>
+  <li><span class="featural">u</span> /ʊ/ → <span class="featural">U</span> /u/</li>
 </ul>
 <p>
-  My dialect of English also contains five phonemic diphthongs: /a&#x26A;/, /&aelig;&#x28A;/, /e&#x26A;/, /&#x259;&#x28A;/, and /&#x254;&#x26A;/. There is also the sequence /ju/ (which can be interpreted as either a diphthong or a glide followed by a vowel), as well as four "rhotic diphthongs": /i&#x279;/, /e&#x279;/, /&#x251;&#x279;/, and /&#x254;&#x279;/. Most of these are spelled just as you would expect:
+  My dialect of English also contains five phonemic diphthongs: /aɪ/, /æʊ/, /eɪ/, /əʊ/, and /ɔɪ/. There is also the sequence /ju/ (which can be interpreted as either a diphthong or a glide followed by a vowel), as well as four "rhotic diphthongs": /iɹ/, /eɹ/, /ɑɹ/, and /ɔɹ/. Most of these are spelled just as you would expect:
 </p>
 <ul>
-  <li><span class="featural">ai</span> = /a&#x26A;/</li>
-  <li><span class="featural">eu</span> = /&aelig;&#x28A;/</li>
-  <li><span class="featural">Ei</span> = /e&#x26A;/</li>
-  <li><span class="featural">xu</span> = /&#x259;&#x28A;/</li>
-  <li><span class="featural">oi</span> = /&#x254;&#x26A;/</li>
+  <li><span class="featural">ai</span> = /aɪ/</li>
+  <li><span class="featural">eu</span> = /æʊ/</li>
+  <li><span class="featural">Ei</span> = /eɪ/</li>
+  <li><span class="featural">xu</span> = /əʊ/</li>
+  <li><span class="featural">oi</span> = /ɔɪ/</li>
   <li><span class="featural">yU</span> = /ju/</li>
-  <li><span class="featural">Ir</span> = /i&#x279;/</li>
-  <li><span class="featural">Er</span> = /e&#x279;/</li>
-  <li><span class="featural">ar</span> = /&#x251;&#x279;/</li>
-  <li><span class="featural">or</span> = /&#x254;&#x279;/</li>
+  <li><span class="featural">Ir</span> = /iɹ/</li>
+  <li><span class="featural">Er</span> = /eɹ/</li>
+  <li><span class="featural">ar</span> = /ɑɹ/</li>
+  <li><span class="featural">or</span> = /ɔɹ/</li>
 </ul>
 
 <h2>Notes</h2>
 
 <p>
-  The letters <span class="featural">O</span> and <span class="featural">U</span> are written differently when using pen and paper. Instead of a diagonal leftward stroke at the end, there should be a slighly curved rightward stroke, kind of like a miniature "<b>&#x25E1;</b>." I decided to use leftward strokes when making the font to avoid overlapping glyphs.
+  The letters <span class="featural">O</span> and <span class="featural">U</span> are written differently when using pen and paper. Instead of a diagonal leftward stroke at the end, there should be a slighly curved rightward stroke, kind of like a miniature "<b>◡</b>." I decided to use leftward strokes when making the font to avoid overlapping glyphs.
 </p>
 <p>
   Syllabic consonants are written with a single letter. Therefore, "work" is spelled <span class="featural">wrk</span>, "full" is spelled <span class="featural">fl</span>, and "button" is spelled <span class="featural">bOtn</span>.
