--- a/games/mini-golf/index.html
+++ b/games/mini-golf/index.html
@@ -8,24 +8,24 @@ title: 'Mini Golf'
 </div>
 
 <audio loop id="song">
-    <source src="music.mp3">
+    <source src="audio/music.mp3">
 </audio>
 <audio id="bounce">
-    <source src="https://codehs.com/uploads/a5e98b1a6e50cb89fd6f9133a20739f2">
+    <source src="audio/bounce.mp3">
 </audio>
 <audio id="splash">
-    <source src="https://codehs.com/uploads/a7966fcab9d194892337093a34099e31">
+    <source src="audio/splash.mp3">
 </audio>
 <audio id="ballInHole">
-    <source src="https://codehs.com/uploads/318d7e7075cca1c18f52e0f461d28324">
+    <source src="audio/ball-in-hole.mp3">
 </audio>
 <audio id="ballHit">
-    <source src="https://codehs.com/uploads/0b70f8e1e17b4076d3a04c44817ea408">
+    <source src="audio/ball-hit.mp3">
 </audio>
 <audio id="teleportation">
-    <source src="https://codehs.com/uploads/a67e0b41660a66f3acaa18614ed053a4">
+    <source src="audio/teleportation.mp3">
 </audio>
 
-<img id="image" src="https://codehs.com/uploads/229cd5fb701f5a4b4bf4c11f1cc73a3f" width="0" height="0">
+<img id="image" src="mute.png" width="0" height="0">
 
 <script src="game.js"></script>
