download babylon.js

--- a/games/dark-forest/index.html
+++ b/games/dark-forest/index.html
@@ -12,7 +12,7 @@ title: 'Dark Forest'
 
 <canvas id="forest"></canvas>
 
-<script src="https://preview.babylonjs.com/babylon.js"></script>
-<script src="https://preview.babylonjs.com/earcut.min.js"></script>
+<script src="/assets/js/babylon.js"></script>
+<script src="/assets/js/earcut.min.js"></script>
 
 <script src="game.js"></script>
