fix script link

--- a/games/arrow-game/index.html
+++ b/games/arrow-game/index.html
@@ -7,7 +7,7 @@ title: 'Arrow Game'
   <div id="game-div"></div>
 </div>
 
-<script src="https://owenbechtel.com/phaser.min.js"></script>
+<script src="/assets/js/phaser.min.js"></script>
 
 <script src="platforms.js"></script>
 <script src="archer.js"></script>
