minor style change (buttons)

--- a/games/flappy-bird/index.html
+++ b/games/flappy-bird/index.html
@@ -4,6 +4,9 @@ title: 'Flappy Bird'
 ---
 
 <style>
+  .centered {
+    padding-top: 30px;
+  }
   button {
     margin-left: 3px;
     margin-right: 3px;
@@ -11,10 +14,8 @@ title: 'Flappy Bird'
 </style>
 
 <div class="centered">
-  <p>
-    <button id="start-game">Start Game</button>
-    <button id="github">Github</button>
-  </p>
+  <button id="start-game">Start Game</button>
+  <button id="github">Github</button>
 </div>
 
 <div id="flappy-bird"></div>
