--- a/games/index.html
+++ b/games/index.html
@@ -92,9 +92,17 @@ my_games:
     href: 'guess-the-color'
     image: 'guess-the-color/image.png'
 
-  - name: 'Hangman'
-    href: 'hangman'
-    image: 'hangman/image.png'
+  - name: 'Hangman (Capitals)'
+    href: 'hangman/capitals'
+    image: 'hangman/capitals/image.png'
+
+  - name: 'Hangman (Nouns)'
+    href: 'hangman/nouns'
+    image: 'hangman/nouns/image.png'
+
+  - name: 'Hangman (US States)'
+    href: 'hangman/us-states'
+    image: 'hangman/us-states/image.png'
 
   - name: 'Homecoming'
     href: 'homecoming'
