--- a/games/hangman/capitals/index.html
+++ b/games/hangman/capitals/index.html
@@ -1,25 +1,6 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+---
+layout: 'basic'
+title: 'Hangman (Capitals)'
+---
 
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="/bootstrap.min.css">
-        
-        <title>Hangman (Capitals)</title>
-    </head>
-    <body>
-        <<script src="/navbar.js"></script>
-        <script>navbar("games")</script>
-        
-        <div class="text-center" style="padding-top:50px">
-            <h1>Hangman (Capitals)</h1><br>
-            <p>Press the green button to start.</p>
-            <iframe frameborder="0" width="50%" height="570px" src="https://replit.com/@UnaryPlus/Hangman-Capitals?lite=1&outputonly=1"></iframe>
-        </div>
-
-        <!-- Bootstrap JS -->
-        <script src="/bootstrap.min.js"></script>
-    </body>
-</html>
+<iframe frameborder="0" width="100%" height="100%" src="https://replit.com/@UnaryPlus/Hangman-Capitals?embed=true"></iframe>
