fix game styling

--- a/games/homecoming/index.html
+++ b/games/homecoming/index.html
@@ -3,6 +3,13 @@ layout: 'basic'
 title: 'Homecoming'
 ---
 
+<style>
+  html, body {
+    margin: 0px;
+    overflow: hidden;
+  }
+</style>
+
 <script src="/assets/js/phaser.min.js"></script>
 
 <script src="game.js"></script>
