--- a/games/dark-forest/index.html
+++ b/games/dark-forest/index.html
@@ -4,6 +4,11 @@ title: 'Dark Forest'
 ---
 
 <style>
+  html, body {
+    margin: 0px;
+    height: 100%;
+    overflow: hidden;
+  }
   #forest {
     width: 100%;
     height: 100%;
