--- a/games/gravity-ball/index.html
+++ b/games/gravity-ball/index.html
@@ -3,6 +3,13 @@ layout: 'basic'
 title: 'Gravity Ball'
 ---
 
+<style>
+  html, body {
+    margin: 0px;
+    overflow: hidden;
+  }
+</style>
+
 <script src="/assets/js/phaser.min.js"></script>
 
 <script src="data.js"></script>
