--- a/games/hangman/us-states/index.html
+++ b/games/hangman/us-states/index.html
@@ -3,4 +3,12 @@ layout: 'basic'
 title: 'Hangman (US States)'
 ---
 
+<style>
+  html, body {
+    margin: 0px;
+    height: 100%;
+    overflow: hidden;
+  }
+</style>
+
 <iframe frameborder="0" width="100%" height="100%" src="https://replit.com/@UnaryPlus/Hangman-US-States?embed=true"></iframe>
