--- a/games/hangman/nouns/index.html
+++ b/games/hangman/nouns/index.html
@@ -1,14 +1,5 @@
 ---
-layout: 'basic'
+layout: 'replit'
 title: 'Hangman (Nouns)'
+src: 'https://replit.com/@UnaryPlus/Hangman-Nouns?embed=true'
 ---
-
-<style>
-  html, body {
-    margin: 0px;
-    height: 100%;
-    overflow: hidden;
-  }
-</style>
-
-<iframe frameborder="0" width="100%" height="100%" src="https://replit.com/@UnaryPlus/Hangman-Nouns?embed=true"></iframe>
