add link to evo. sim.

--- a/games/index.html
+++ b/games/index.html
@@ -71,6 +71,10 @@ my_games:
     href: 'evica'
     image: 'evica/image.png'
 
+  - name: 'Evolution Simulator'
+    href: 'evolution-simulator'
+    image: 'evolution-simulator/image.png'
+
   - name: 'Flappy Bird'
     href: 'flappy-bird'
     image: 'flappy-bird/image.png'
