--- a/games/evolution-simulator/index.html
+++ b/games/evolution-simulator/index.html
@@ -92,6 +92,8 @@ title: 'Evolution Simulator'
       <label for="mut-addition-prob">Particle addition (prob):</label>
       <input type="number" id="mut-addition-prob" name="mut-addition-prob" value="0.05" step="any" required>
     </div>
+
+    <a href="https://github.com/UnaryPlus/evolution-simulator#readme">About</a>
   </form>
 
   <div id="game"></div>
