--- a/symmetrica/index.html
+++ b/symmetrica/index.html
@@ -72,7 +72,7 @@ title: 'Symmetrica'
 <ul>
   <li>12-cell spark</li>
   <li>Extremely common</li>
-  <li>Found in [...]</li>
+  <!-- <li>Found in [...]</li> -->
 </ul>
 {% include viewer.html rle="b2o2b2o2$o2b2o2bo2$b2o2b2o!" %}
 <ul>
@@ -84,7 +84,7 @@ title: 'Symmetrica'
 <ul>
   <li>Period-23 oscillator</li>
   <li>Produces beehive sparks</li>
-  <li>Three most common variants are shown</li>
+  <li>The three most common variants are shown</li>
 </ul>
 {% include viewer.html rle="bo2bo$b4o$o4bo13b2o11bo2bo$b5o13bo12b4o$bo4bo14bo9bo4bo$2b5o10b5o10b5o$2bo4bobo7bo4bobo7bo4bobo$4bo3bobo8bo3bobo8bo3bobo$3b2o3bobo7b2o3bobo7b2o3bobo$9bo14bo14bo!" %}
 
@@ -654,6 +654,10 @@ title: 'Symmetrica'
 </ul>
 {% include viewer.html rle="14bobo$13bo2bo$9b2o$9b2o$14bo3bo$18bo$9bo7b3o$bo2b2o2bobo8bo4bobobo$o3b2o5bo7b2o2b2obobob2o$bo2b2o2bobo8bo4bobobo2bo$9bo7b3o10b2o$18bo$14bo3bo$9b2o$9b2o$13bo2bo$14bobo!" %}
 <ul>
+  <li>The smallest known predecessor of the titan has only 11 cells.</li>
+</ul>
+{% include viewer.html rle="o$4ob2o$o6bo$5b2o!" %}
+<ul>
   <li>Two titans can combine, resulting in a puffer that produces flares and blocks.</li>
 </ul>
 {% include viewer.html rle="8b3o16b3o$8bobo16bobo2$7b3o18b3o2$7b3o18b3o2$7b3o18b3o$8bo20bo3$8bo20bo$6b5o16b5o$4b3o3b3o12b3o3b3o$6bo3bo16bo3bo$2o13b2o4b2o13b2o2$o3bo7bo3bo4bo3bo7bo3bo$bo13bo6bo13bo2$8bo20bo$2b2o3bobo3b2o8b2o3bobo3b2o$2b2o2bo3bo2b2o8b2o2bo3bo2b2o$7bobo18bobo3$7b3o18b3o$7b3o18b3o3$7bobo18bobo$8bo20bo!" %}
@@ -678,7 +682,7 @@ title: 'Symmetrica'
 <h3>Tub spark</h3>
 <ul>
   <li> 8-cell spark</li>
-  <li>Found in [...]</li>
+  <!-- <li>Found in [...]</li> -->
 </ul>
 {% include viewer.html rle="3bo$bo3bo2$o5bo2$bo3bo$3bo!" %}
 <ul>
