--- a/symmetrica/index.html
+++ b/symmetrica/index.html
@@ -482,6 +482,13 @@ title: 'Symmetrica'
 </ul>
 {% include viewer.html rle="155bo4b3o$155b3o3bo$62bo4b3o85b3o2bobo2bo$62b3o3bo87bo3b3o2b2o$62b3o2bobo2bo89bo2bo$63bo3b3o2b2o$69bo2bo3$162bo2bo$o4b3o148bo3b3o2b2o$3o3bo62bo2bo82b3o2bobo2bo$3o2bobo2bo52bo3b3o2b2o81b3o3bo68b2o$bo3b3o2b2o50b3o2bobo2bo82bo4b3o64bo4bo$7bo2bo51b3o3bo158b5o15b3o2bo2b2o13bo$62bo4b3o159b2o11b2o2bo2b4o2b2o7bo4b3o$225b2o15b2o3b2o3bo4bo5bo2bobo3bo$225bo2bo29bo10bobo2b2o$243b2o3b2o8b2o4b3o2bob5o$7bo2bo230bo2bo3bo2bo3bobobo11bo2b2o$bo3b3o2b2o215bobo8bobobo5b2o4b2o$3o2bobo2bo217b2o7b2o3bo11bo$3o3bo231bo3bo24bo$o4b3o231b3o19bo4b3o$240bo19bo2bobo3bo$230b2o14b2o7bo10bobo2b2o$230b2o14b2o7b2o4b3o2bob5o$238b2o16bo11bo2b2o$237b2o2$237b3o2bo$237b2obobo$237bo3b2o$237b3o3$22bo4b3o$22b3o3bo45bo4b3o$22b3o2bobo2bo41b3o3bo81bobo$23bo3b3o2b2o40b3o2bobo2bo77bobob2o$29bo2bo42bo3b3o2b2o76bobo2bo$81bo2bo81b2o4$29bo2bo$23bo3b3o2b2o47bo2bo$22b3o2bobo2bo42bo3b3o2b2o$22b3o3bo45b3o2bobo2bo$22bo4b3o44b3o3bo$74bo4b3o!" %}
 
+<h3>Rake 4</h3>
+<ul>
+  <li>Period-32 tugboat rake</li>
+  <li>(Barrel is period-32, tail end is period-64)</li>
+</ul>
+{% include viewer.html rle="8b2o5b2o3bo$15b2o7bo4b3o10b2o$24b3o3bo13bo$7bo10bo5b3o2bobo2bo4b2ob2o$7bob2o7b3o4bo3b3o2b2o$8bo22bo2bo3$2bo7bo22bo2bo$bobo6bo9b3o4bo3b3o2b2o$2ob2o5bo9bo5b3o2bobo2bo$2ob2ob3o17b3o3bo$bobo13b2o7bo4b3o24b2o$2bo14b2o3bo37bo$55b2ob2o4$197b3o4b3o$179bo17b3o4bobo$166b2o9b2ob2o$166b2o3b2o4b2o3bo20b3o$171b2o7bobo3b2o10b2o12b2o$179bo2bo3b2o13bo10b2o5b4o12bo2bo$188bo12bo27bo3b3o2b2o$188bo12bo16bo9b3o2bobo2bo$188bo2bo8b2o18bo5bob3o3bo$188bo2b2o24bo2bo4bo2bo4b3o$184b2o7bo23b2o$177b2o4b4o3bobo19b2o$4b3o11bo158b2o4bo2bo3b3o14b2o4b2o11b2o$3b2ob2ob2o5b2o2bo3b2o3bo154bo22bo5b2o10b4o$9b2o9bo3b2o7bo4b3o169bo13bo4bo13bo2bo$19bo13b3o3bo168bo3bo12b4o8bo3b3o2b2o$3b2ob2o19bo5b3o2bobo2bo125b2o19bo10b2o8bo14b2o4bo3b3o2bobo2bo$4b3o7bo2b2o8b3o4bo3b3o2b2o124b2o19bob4o6bobo4b3o20bo2b4o3bo$13bo6bo19bo2bo143b2o4b2o7bobo18b2o8b2obo4b3o$14b2o4bo166b2o3b4obo8bo16b2o$19bobo47bo14b2o3bo100bo2bobob2o6b2o$19bobo46bobo13b2o7bo4b3o90b3obo2bo6b2o$14b2o4bo46b2ob2ob3o17b3o3bo92b2o$13bo6bo19bo2bo23b2ob2o5bo9bo5b3o2bobo2bo$4b3o7bo2b2o8b3o4bo3b3o2b2o23bobo6bo9b3o4bo3b3o2b2o91bo$3b2ob2o19bo5b3o2bobo2bo25bo7bo22bo2bo$19bo13b3o3bo$9b2o9bo3b2o7bo4b3o$3b2ob2ob2o5b2o2bo3b2o3bo45bo22bo2bo$4b3o11bo55bob2o7b3o4bo3b3o2b2o$74bo10bo5b3o2bobo2bo$91b3o3bo$82b2o7bo4b3o$75b2o5b2o3bo!" %}
+
 <h3>Schooner</h3>
 <ul>
   <li>Period-2 spaceship</li>
