--- a/games/index.html
+++ b/games/index.html
@@ -150,6 +150,10 @@ my_games:
     href: 'scrimish'
     image: 'scrimish/image.png'
 
+  - name: 'Sweeper'
+    href: 'sweeper'
+    image: 'sweeper/image.png'
+
   - name: 'Tanks Battle Royale'
     href: 'https://tanks-battle-royale.unaryplus.repl.co'
     image: 'tanks-battle-royale/image.png'
