forces at play: change 'About' link

--- a/games/forces-at-play/index.html
+++ b/games/forces-at-play/index.html
@@ -14,7 +14,7 @@ title: 'Forces at Play'
   <div id="game"></div>
   <p>
     W: wall &nbsp;&nbsp; E: box &nbsp;&nbsp; F: board &nbsp;&nbsp; D: destroyer &nbsp;&nbsp; R: rotator &nbsp;&nbsp; Q: pusher &nbsp;&nbsp; S: shifter &nbsp;&nbsp; A: generator <br>
-    Backspace: delete &nbsp;&nbsp;&nbsp;&nbsp; Space: start/stop &nbsp;&nbsp;&nbsp;&nbsp; Digits 1&ndash;5: change speed &nbsp;&nbsp;&nbsp;&nbsp; <a href="https://github.com/UnaryPlus/forces-at-play#readme">About</a>
+    Backspace: delete &nbsp;&nbsp;&nbsp;&nbsp; Space: start/stop &nbsp;&nbsp;&nbsp;&nbsp; Digits 1&ndash;5: change speed &nbsp;&nbsp;&nbsp;&nbsp; <a href="/forces">About</a>
 </p>
 </div>
 
