new description on main page

--- a/alphabet/index.html
+++ b/alphabet/index.html
@@ -7,7 +7,7 @@ title: 'Featural Alphabet'
   If you can read this paragraph, the font didn't load correctly, and most of the stuff on this page will make very little sense. You should probably update your browser.
 </p>
 <p>
-  Below is an alternative alphabet I created for the English language. The goal of this alphabet is to be both phonetic and featural. Phonetic means there is a one-to-one correspondence between letters and phonemes, and featural means that the shape of a letter tells you, to some extent, how it is pronounced. For example, since /f/ and /v/ are pronounced in a very similar manner, the letters which represent these sounds look very similar.
+  Below is an alternative alphabet I created for the English language. The goal of this alphabet is to be both phonetic and featural. Phonetic means there is a one-to-one correspondence between letters and phonemes, and featural means that the shape of a letter tells you, to some extent, how it is pronounced. For example, since /f/ and /v/ are pronounced in a very similar manner, the letters which represent these sounds look similar.
 </p>
 
 <h2>Consonants</h2>
