--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@ no_heading: true
   Ahoy!
 </p>
 <p>
-  I'm a computer science student from upstate New York.
-  I like programming, mathematics,
-  conlanging, and writing music. My online
-  name is "UnaryPlus," which is the mathematical term for the addition
-  sign in expressions like "+10." Lately I've been working on the compiler
-  for a pure functional language called Lune, as well as a conlang
-  called Kelǫźno. I hope to finish both of these projects within the next
-  few years.
-</p>
+  I'm a young man from upstate New York currently studying computer 
+  science and mathematics at the University of Massachusetts Amherst.
+  My hobbies include programming, mathematics, worldbuilding/conlanging, 
+  and writing music. My online alias is "UnaryPlus," a reference to 
+  the most useless C operator. This website is a collection of my projects: 
+  games and animations I've created over the years (some as long ago as 
+  8th grade), articles on mathematics and music theory, programming languages, 
+  and some other things. I'm currently working on a conlang called Kalvaszti 
+  &mdash; a project I hope to finish within a year or two.
+
 <div class="image-row">
   <a href="https://github.com/UnaryPlus"><img alt="Github" src="/assets/images/github.png" height="75px"></a>
   <a href="https://unaryplus.bandcamp.com"><img alt="Bandcamp" src="/assets/images/bandcamp.png" height="75px"></a>
