new paragraph on main page

--- a/index.html
+++ b/index.html
@@ -23,3 +23,10 @@ no_heading: true
   <a href="https://unaryplus.bandcamp.com"><img alt="Bandcamp" src="/assets/images/bandcamp.png" height="75px"></a>
   <a href="https://www.youtube.com/channel/UC0_VHk6FDhpTAK6tx3vhabw"><img alt="Youtube" src="/assets/images/youtube.png" height="60px"></a>
 </div>
+
+<p>
+  I have experience in many programming languages, including Javascript,
+  Python, Typescript, C, and Java. My favorite language is Haskell, and I
+  have <a href="https://hackage.haskell.org/user/OwenBechtel">several packages</a>
+  published on Hackage, the central Haskell package archive.
+</p>
