fix links to tanks, chat

--- a/games/index.html
+++ b/games/index.html
@@ -30,7 +30,7 @@ my_games:
     image: 'chaos-game/image.png'
 
   - name: 'Chat Room'
-    href: 'https://chat-room.unaryplus.repl.co'
+    href: 'https://chat.owenbechtel.com'
     image: 'chat-room/image.png'
 
   - name: 'Chunguscraft Story Mode'
@@ -155,7 +155,7 @@ my_games:
     image: 'sweeper/image.png'
 
   - name: 'Tanks Battle Royale'
-    href: 'https://tanks-battle-royale.unaryplus.repl.co'
+    href: 'https://tanks.owenbechtel.com'
     image: 'tanks-battle-royale/image.png'
 
   - name: 'Times Tables'
