add Hensel notation link

--- a/symmetrica/index.html
+++ b/symmetrica/index.html
@@ -24,7 +24,7 @@ title: 'Symmetrica'
   </li>
 </ol>
 <p>
-  In Hensel notation, these rules are abbreviated as "B2-ak3-jnqr4ce/S23."
+  In [Hensel notation](https://conwaylife.com/wiki/Isotropic_non-totalistic_rule#Hensel_notation), these rules are abbreviated as "B2-ak3-jnqr4ce/S23."
 </p>
 <p>
   In February 2022, I wrote a (now outdated) <a href="/blog/cellular-automaton-symmetrica/">article</a> with a list of patterns I had discovered the previous summer. Since then, I have investigated Symmetrica further with the help of apgsearch and <a href="https://catagolue.hatsya.com/census/b2-ak3-jnqr4ces23">Catagolue</a>. The list of known patterns is now much more extensive, and includes puffers, rakes, and large spaceships.
